# MarkView

./: Cargo.toml  MarkView-1.0.0.flatpak  README.md
.github/workflows/: release.yml
flatpak/: io.github.v8v88v8v88.MarkView.yml
markview-1.0.0-x86_64-unknown-linux-gnu/: README.md  markview
repo/: summary  summary.idx
repo/refs/heads/app/io.github.v8v88v8v88.MarkView/x86_64/: master
repo/summaries/: 6261f10d9fae3319b7407d139b07a4c37d32d3d430257be9e572367ca77c5fc7-daea17b220455014ee566ba92f509386319e4c35dce8209834e533f4389920b3.delta
scripts/: build-release.sh
src/: main.rs
