[package]
name = "gtk-markdown-viewer"
version = "1.0.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_10"] }
gio = "0.21"
glib = "0.21"
sourceview5 = { version = "0.10", features = ["v5_4"] }
pulldown-cmark = "0.13"
webkit6 = "0.5"

[dependencies.adw]
package = "libadwaita"
version = "0.8"
features = ["v1_5", "v1_8"]
